[package]
name = "bevy_platformer"
version = "0.0.0"
authors = ["Jeremiah Senkpiel <fishrock123@rocketmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/bevy_wgpu",
    "game_plugin/default"
]

[dependencies]
bevy = { version = "0.5.0", default-features = false }
game_plugin = {path = "game_plugin"}
winit = "0.24.0"

[build-dependencies]
embed-resource = "1.4"
