[package]
name = "game_plugin"
version = "0.0.0"
authors = ["Jeremiah Senkpiel <fishrock123@rocketmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/bevy_wgpu",
    "bevy_kira_audio/ogg"
]

[dependencies]
bevy = { version = "0.5.0", default-features = false }
bevy_kira_audio = { version = "0.4.0" }
rand = "0.8.3"
